--- a/py/static/css/styles.css
+++ b/py/static/css/styles.css
@@ -236,19 +236,31 @@ span.form-label-secondary {
 }
 
 .gen-action {
-    width: 2.5em;
-    height: 2em;
+    width: 60px;
+    height: 40px;
+    vertical-align: middle;
 }
 
 #master-sha-div {
     margin-top: 8px;
+    /*height: 2em;*/
 }
 
 #master-sha {
-    padding: 4px 10px;
+    padding: 10px 10px;
     border-radius: 5px;
+    line-height: 34px;
+    vertical-align: middle;
 }
 
+#save-local-sha {
+    font-size: medium;
+    font-family: sans-serif;
+    width: unset;
+    display: none;
+    white-space: nowrap;
+    overflow: hidden;
+}
 
 .sha-correct {
     background-color: lightgreen;
@@ -257,6 +269,18 @@ span.form-label-secondary {
 .sha-incorrect {
     background-color: lightcoral;
 }
+
+#when-sha-error {
+    margin-left: 10px;
+    /*display: none;*/
+    height: 30px;
+    font-size: x-large;
+    font-family: monospace;
+}
+
+/*#when-sha-error button{*/
+/*    width: 60px;*/
+/*}*/
 
 .loader {
     display: none;
@@ -287,3 +311,9 @@ span.form-label-secondary {
     height: 1.5em;
     padding-right: 5px;
 }
+
+#params-foldable input[type="checkbox"] {
+    margin-top: 3px;
+    margin-right: 6px;
+}
+
