--- a/py/static/css/styles.css
+++ b/py/static/css/styles.css
@@ -157,8 +157,11 @@ span.form-label-primary {
     font-family: monospace;
     font-weight: bold;
     color: darkgreen;
+    background-color: rgba(1,0,255,0.1);
+    padding: 2px 10px;
+    border-radius: 5px;
+    display: none;
 }
-
 span.form-label {
     display: block;
     /*color: white;*/
@@ -225,6 +228,10 @@ span.form-label-secondary {
     font-family: monospace;
 }
 
+#result-label {
+    cursor: pointer;
+}
+
 .result {
     font-size: large;
 }
@@ -277,7 +284,14 @@ span.form-label-secondary {
     font-size: x-large;
     font-family: monospace;
 }
-
+#hash-from-account {
+    /*font-weight: bold;*/
+    display: none;
+    /*font-size: large;*/
+}
+#hash-account-for {
+    font-size: large;
+}
 /*#when-sha-error button{*/
 /*    width: 60px;*/
 /*}*/
