--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -62,7 +62,8 @@
             </div>
         </div>
         <span class="form-label-secondary form-label">Мастер-пароль</span>
-        <input type="password" name="master" id="master-input" class="input-master gen-input" autocomplete="new-password" readonly
+        <input type="password" name="master" id="master-input" class="input-master gen-input"
+               autocomplete="new-password" readonly
                onclick="this.removeAttribute(
                     'readOnly');" onblur="this.setAttribute(
                     'readOnly', 'readonly');">
@@ -70,13 +71,19 @@
         <div class="res" style="display:none;">
             <span class="form-label form-label-primary" id="result-label" style="position: relative"><div
                     class="progress"></div>Результат</span>
-            <span class="form-label form-label-secondary">Хеш мастер-пароля</span>
-            <div class="result" id="master-sha-div"><span class="result-value" id="master-sha"></span><span id="when-sha-error"><button class="gen-action" id="save-global-sha">💾</button> <button class="gen-action" id="save-sha-more">...</button> <button class="gen-action" id="save-local-sha">💾 ➔ аккаунт</button></span></div>
+            <span class="form-label form-label-secondary">Хеш мастер-пароля<span id="hash-from-account"> (для аккаунта <span class="selected-value" id="hash-account-for"></span>)</span></span>
+            <div class="result" id="master-sha-div"><span class="result-value" id="master-sha"></span><span
+                    id="when-sha-error"><button class="gen-action" id="save-global-sha">💾</button> <button
+                    class="gen-action" id="save-sha-more">...</button> <button class="gen-action" id="save-local-sha">💾 ➔ аккаунт</button></span>
+            </div>
             <span class="form-label form-label-secondary">Пароль</span>
 
             <div class="pwd">
-                <a class="repeatable" href="#" onclick="copyResultToClipboard(); return false;"><span class="result-value" id="result"></span></a>
-                <button class="gen-action" onclick="copyResultToClipboard()">📋</button>
+                <a class="repeatable" href="#" onclick="copyResultToClipboard(); return false;"><span
+                        class="result-value" id="result"></span></a>
+                <button class="gen-action" onclick="copyResultToClipboard()"><span
+                        style="font-size: .7em; margin-right: .125em; position: relative; top: -.25em; left: -.125em">
+  📄<span style="position: absolute; top: .25em; left: .25em">📄</span></span></button>
                 <button class="gen-action" onclick="revealPassword()">👁</button>
                 <button class="gen-action" onclick="cleanup()">⌫</button>
             </div>
