--- a/py/static/css/styles.css
+++ b/py/static/css/styles.css
@@ -264,7 +264,7 @@ span.form-label-secondary {
     font-size: medium;
     font-family: sans-serif;
     width: unset;
-    display: none;
+    /*display: none;*/
     white-space: nowrap;
     overflow: hidden;
 }
