--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -73,8 +73,7 @@
                     class="progress"></div>Результат</span>
             <span class="form-label form-label-secondary">Хеш мастер-пароля<span id="hash-from-account"> (для аккаунта <span class="selected-value" id="hash-account-for"></span>)</span></span>
             <div class="result" id="master-sha-div"><span class="result-value" id="master-sha"></span><span
-                    id="when-sha-error"><button class="gen-action" id="save-global-sha">💾</button> <button
-                    class="gen-action" id="save-sha-more">...</button> <button class="gen-action" id="save-local-sha">💾 ➔ аккаунт</button></span>
+                    id="when-sha-error"><button class="gen-action" id="save-global-sha">💾</button> <button class="gen-action" id="save-local-sha">💾 ➔ аккаунт</button></span>
             </div>
             <span class="form-label form-label-secondary">Пароль</span>
 
