Minor text change

--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -75,8 +75,7 @@
             <div class="result" id="master-sha-div"><span class="result-value" id="master-sha"></span><span
                     id="when-sha-error"><button class="gen-action" id="save-global-sha">💾</button> <button class="gen-action" id="save-local-sha">💾 ➔ аккаунт</button></span>
             </div>
-            <span class="form-label form-label-secondary">Пароль</span>
-
+            <span class="form-label form-label-secondary">Сгенерированный пароль</span>
             <div class="pwd">
                 <a class="repeatable" href="#" onclick="copyResultToClipboard(); return false;"><span
                         class="result-value" id="result"></span></a>
