--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -74,7 +74,7 @@
 <!-- Main content: shift it to the right by 200 pixels when the sidebar is visible -->
 <div class="w3-main" style="margin-left:200px">
     <div class="w3-row w3-padding-64">
-        <div class="w3-twothird w3-container">
+        <div class="w3-container">
             {% for message in get_flashed_messages() %}
                 <div class="flash">{{ message }}</div>
             {% endfor %}
