--- a/py/static/css/styles.css
+++ b/py/static/css/styles.css
@@ -1,222 +1,222 @@
 .current-link {
-    background-color: #ee6002;
+  background-color: #7fd7e2;
 }
 
 .current-link:hover {
-    /*background-color: teal!important;*/
+  /*background-color: teal!important;*/
 }
 
 /* Style inputs with type="text", select elements and textareas */
-input[type=text], input[type=password], input[type=url], select, textarea {
-    width: 100%; /* Full width */
-    padding: 6px; /* Some padding */
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 6px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+input[type="text"],
+input[type="password"],
+input[type="url"],
+select,
+textarea {
+  width: 100%; /* Full width */
+  padding: 6px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 6px; /* Bottom margin */
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
 /* Style the submit button with a specific background color etc */
-input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+input[type="submit"] {
+  background-color: #04aa6d;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
-    background-color: #45a049;
+input[type="submit"]:hover {
+  background-color: #45a049;
 }
 
 /* Add a background color and some padding around the form */
 .form-container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 
 .narrow-form {
-
 }
 
 .below {
-    position: absolute;
-    width: 100%;
-    bottom: 0px;
-    text-align: center;
-    margin-bottom: 5px;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+  text-align: center;
+  margin-bottom: 5px;
 }
 
 .below .username {
-    font-family: monospace;
-    font-weight: bold;
+  font-family: monospace;
+  font-weight: bold;
 }
 
 .matching-values {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .resource-found {
-    flex: 1;
-    margin: 6px;
-    padding: 4px;
-    white-space: nowrap;
-    border: 1px solid #ccc;
-    text-align: center;
-    border-radius: 6px;
-    background-color: #eee;
-    display: inline;
-    width: fit-content;
-    cursor: pointer;
+  flex: 1;
+  margin: 6px;
+  padding: 4px;
+  white-space: nowrap;
+  border: 1px solid #ccc;
+  text-align: center;
+  border-radius: 6px;
+  background-color: #eee;
+  display: inline;
+  width: fit-content;
+  cursor: pointer;
 }
 
 .selected-value-new {
-    display: none;
-    color: darkred;
+  display: none;
+  color: darkred;
 }
 
 .new-resource {
-    background-color: #ffe !important;
+  background-color: #ffe !important;
 }
 
 .new-resource-label {
-    padding-right: 0.5em;
+  padding-right: 0.5em;
 }
 
 .matching-extender {
-    display: none;
-    background-color: #ddd;
-    text-align: center;
-    width: 100%;
-    padding-top: 0px;
-    margin-top: 0px;
+  display: none;
+  background-color: #ddd;
+  text-align: center;
+  width: 100%;
+  padding-top: 0px;
+  margin-top: 0px;
 }
 
 #resource-url-div {
-    width: 100%;
+  width: 100%;
 }
 
 .selected-value-changed {
-    color: darkred;
-    margin-left: 1em;
+  color: darkred;
+  margin-left: 1em;
 }
 
 span.form-label-first {
-    margin-top: 0px !important;
+  margin-top: 0px !important;
 }
 
 div.form-label-primary {
-    background: rgba(96, 2, 238, 0.09);
-    /* background: linear-gradient(270deg,  rgba(96,2,238,0.00) 0%, rgba(96,2,238,0.2) 100%); */
-    font-size: large;
-    border-radius: 10px;
-    width: 100%;
+  background: rgba(96, 2, 238, 0.09);
+  /* background: linear-gradient(270deg,  rgba(96,2,238,0.00) 0%, rgba(96,2,238,0.2) 100%); */
+  font-size: large;
+  border-radius: 10px;
+  width: 100%;
 }
 
 .foldable-label {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 3px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 3px;
 }
 
 .selected-object {
-    background: #eeffff;
-    padding: 0.3em 1em;
-    font-weight: bold;
-    font-size: large;
+  background: #eeffff;
+  padding: 0.3em 1em;
+  font-weight: bold;
+  font-size: large;
 }
 
 .foldable .form-label {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .folded {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .folded-icon {
-    width: 1em;
-    display: inline-block;
+  width: 1em;
+  display: inline-block;
 }
 
 .unfolded .folded-icon {
-
 }
 
 .folded .folded-icon {
-    transform: rotate(270deg);
-
+  transform: rotate(270deg);
 }
 
 .selected-value {
-    font-family: monospace;
-    font-weight: bold;
-    color: darkgreen;
-    background-color: rgba(1,0,255,0.1);
-    padding: 2px 10px;
-    border-radius: 5px;
-    display: none;
+  font-family: monospace;
+  font-weight: bold;
+  color: darkgreen;
+  background-color: rgba(1, 0, 255, 0.1);
+  padding: 2px 10px;
+  border-radius: 5px;
+  display: none;
 }
 
 .form-label {
-    /* display: block; */
-    /*color: white;*/
-    padding: 0.3em 1em;
-    /*padding: 4px;*/
-    margin-top: 8px;
-    /*margin-bottom: 4px;*/
-
+  /* display: block; */
+  /*color: white;*/
+  padding: 0.3em 1em;
+  /*padding: 4px;*/
+  margin-top: 8px;
+  /*margin-bottom: 4px;*/
 }
 
 #resource-url-div-inner {
-    display: flex;
-    align-items: stretch;
+  display: flex;
+  align-items: stretch;
 }
 
 .form-label-secondary {
-    background: rgba(238, 96, 2, 0.08);
-    /*background: linear-gradient(90deg, rgba(238,96,2,0.05) 0%, rgba(238,96,2,0.2) 100%);*/
-    font-size: medium;
+  background: rgba(238, 96, 2, 0.08);
+  /*background: linear-gradient(90deg, rgba(238,96,2,0.05) 0%, rgba(238,96,2,0.2) 100%);*/
+  font-size: medium;
 }
 
 #resource-url {
-    display: inline-block;
-    flex-grow: 1;
+  display: inline-block;
+  flex-grow: 1;
 }
 
 #resource-a {
-    align-self: center;
-    flex: 1;
+  align-self: center;
+  flex: 1;
 }
 
 .borderless-button {
-    border: none;
-    border-radius: 10px;
-    background-color: #ddd;
+  border: none;
+  border-radius: 10px;
+  background-color: #ddd;
 }
 
 .borderless-button:hover {
-    background-color: #ccc;
+  background-color: #ccc;
 }
 
 #url-edit {
-    margin-right: 10px;
-    width: 40px;
+  margin-right: 10px;
+  width: 40px;
 }
 
 .menu-item {
-    /*width: auto!important;*/
+  /*width: auto!important;*/
 }
 
 .nowidth {
-    width: auto !important;
+  width: auto !important;
 }
 
 /*.circle-progress {*/
@@ -241,124 +241,253 @@ div.form-label-primary {
 /*}*/
 
 .progress {
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    background: rgba(90, 200, 100, 0.9);
-    z-index: -1;
-    border-radius: 10px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(90, 200, 100, 0.9);
+  z-index: -1;
+  border-radius: 10px;
 }
 
 .result-value {
-    font-family: monospace;
+  font-family: monospace;
 }
 
 #result-label {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .result {
-    font-size: large;
+  font-size: large;
 }
 
 .pwd {
-    font-size: x-large;
-    font-family: monospace;
-    color: darkgreen;
-    margin-top: 5px;
+  font-size: x-large;
+  font-family: monospace;
+  color: darkgreen;
+  margin-top: 5px;
 }
 
 .gen-action {
-    width: 60px;
-    height: 40px;
-    vertical-align: middle;
+  width: 60px;
+  height: 40px;
+  vertical-align: middle;
 }
 
 #master-sha-div {
-    margin-top: 8px;
-    /*height: 2em;*/
+  margin-top: 8px;
+  /*height: 2em;*/
 }
 
 #master-sha {
-    padding: 10px 10px;
-    border-radius: 5px;
-    line-height: 34px;
-    vertical-align: middle;
+  padding: 10px 10px;
+  border-radius: 5px;
+  line-height: 34px;
+  vertical-align: middle;
 }
 
 #save-local-sha {
-    font-size: medium;
-    font-family: sans-serif;
-    width: unset;
-    /*display: none;*/
-    white-space: nowrap;
-    overflow: hidden;
+  font-size: medium;
+  font-family: sans-serif;
+  width: unset;
+  /*display: none;*/
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .sha-correct {
-    background-color: lightgreen;
+  background-color: lightgreen;
 }
 
 .sha-incorrect {
-    background-color: lightcoral;
+  background-color: lightcoral;
 }
 
 #when-sha-error {
-    margin-left: 10px;
-    /*display: none;*/
-    height: 30px;
-    font-size: x-large;
-    font-family: monospace;
+  margin-left: 10px;
+  /*display: none;*/
+  height: 30px;
+  font-size: x-large;
+  font-family: monospace;
 }
 #hash-from-account {
-    /*font-weight: bold;*/
-    display: none;
-    /*font-size: large;*/
+  /*font-weight: bold;*/
+  display: none;
+  /*font-size: large;*/
 }
 #hash-account-for {
-    font-size: large;
+  font-size: large;
 }
 /*#when-sha-error button{*/
 /*    width: 60px;*/
 /*}*/
 
 .loader {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 50%;
-    z-index: 1000;
-    text-align: center;
-    vertical-align: middle;
-    background: black;
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 50%;
+  z-index: 1000;
+  text-align: center;
+  vertical-align: middle;
+  background: black;
 }
 
 .loader img {
-    width: 540px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  width: 540px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 #saving-wait {
-    display: none;
-    font-size: medium;
+  display: none;
+  font-size: medium;
 }
 #saving-wait img {
-    height: 1.5em;
-    padding-right: 5px;
+  height: 1.5em;
+  padding-right: 5px;
 }
 
 #params-foldable input[type="checkbox"] {
-    margin-top: 3px;
-    margin-right: 6px;
+  margin-top: 3px;
+  margin-right: 6px;
 }
 
 .inlabel-button {
-    height: 30px;
-    margin-left: 20px;
+  height: 30px;
+  margin-left: 20px;
+}
+
+.default_account {
+  background-color: #f2f2f2;
+}
+
+.default {
+  background-color: red;
+}
+
+.cb-gap {
+  margin-left: 5px;
+}
+
+.resource-button {
+    border: none;
+    color: rgb(0, 0, 0);
+    padding: 6px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+#save-resource {
+  background-color: #d0ffd0;
+  color: rgb(0, 0, 0); 
+}
+
+#save-resource[disabled] {
+  background-color: #ddd;
+  color: black;
+}
+
+#delete-resource {
+    background-color: #ffd0d0;
+    color: rgb(0, 0, 0); 
+}
+
+.fa {
+  /* margin-left: -12px; */
+  margin-right: 8px;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+#close-button {
+    background-color: white;
+    color: black;
+    /* border-radius: 100%; */
+    border-color: #aaa;
+    border-style: solid;
+    /* padding: 6px 0px; */
+    font-size: 2em;
+    border-width: 1px;
+    width: 1.5em; 
+    height: 1.5em; 
+    vertical-align: middle;
+    padding-top: -0.5em;
+    padding-bottom: -0.5em;
+    border-radius: 5px;
+}
+
+#close-button span {
+    font-size: 0.5em;
+    /* height: 0px;
+    overflow:visible;
+    display: block;
+    margin-top: -0.5em; */
+    vertical-align: middle;
+}
+.center {
+    text-align: center;
+}
+
+#close-button svg {
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+
+.delete-resource {
+    background-color: transparent;
+    border: none;
+    height: 2em;
+    cursor: pointer;
+}
+
+.delete-resource-td {
+    padding-right: 0 !important;
+    text-align: center !important;
+}
+
+.delete-resource svg {
+    width: 1em;
+    height: 80%;
+    display: block;
+}
+
+#all-resources-tbl {
+    border-collapse: collapse;
+    margin-top: 20px;
+    width: 100%;
+}
+
+#all-resources-tbl th {
+    text-align: left;
+    padding-right: 10px;
+    color: #355;
+    background-color: #f0f0f0;
+}
+#all-resources-tbl td {
+    text-align: left;
+    padding-right: 10px;
+    color: #344;
+}
+
+.resource-row:hover {
+    background-color: #eff;
+    border: none;
+}
+
+.resource-row .delete-resource-td:hover {
+    background-color: #ffd0d0;;
+}
+.resources-params {
+    font-family: monospace;
 }
