--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='ext/font.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='ext/font-awesome.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/snackbar.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="{{ url_for('static', filename='ext/jquery-3.6.0.js') }}"></script>
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
     <script src="{{ url_for('static', filename='js/foldable.js') }}"></script>
